@@ -1,3 +1,11 @@
+2008-09-18  Paul Thomas  <pault@gcc.gnu.org>
+
+       PR fortran/35945
+       * gfortran.dg/host_assoc_types_2.f90: New test.
+
+       PR fortran/36700
+       * gfortran.dg/host_assoc_call_2.f90: New test.
+
 2008-09-18  DJ Delorie  <dj@redhat.com>
 
 	* gcc.c-torture/execute/20060420-1.c: Fix alignment logic.
